[gd_scene load_steps=4 format=2]

[ext_resource path="res://GFX/White-Square.jpg" type="Texture" id=1]
[ext_resource path="res://PLayer/enemy.gd" type="Script" id=2]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 119.824, 119.469 )

[node name="enemy" type="KinematicBody2D"]
modulate = Color( 1, 0.0470588, 0, 1 )
position = Vector2( 309.45, 160.611 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="Sprite" groups=[
"Enemy",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
shape = SubResource( 1 )

[node name="Stun_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="Sprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Stun_timer" to="." method="_on_Stun_timer_timeout"]
